--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.22.7",
+    "antd-mobile": "^5.38.1",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "cra-template": "1.2.0",
@@ -13,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
     "sass": "^1.83.1",
     "sass-resources-loader": "^2.2.5",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "json-server": "^1.0.0-beta.3"
   }
 }
