--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.83.1",
     "sass-resources-loader": "^2.2.5",
-    "uuid": "^11.0.4"
+    "uuid": "^11.0.4",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
